--- a/lms_frontend/package.json
+++ b/lms_frontend/package.json
@@ -29,6 +29,9 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "autoprefixer": "^10.4.22",
+    "cross-env": "^7.0.3",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18"
   }
 }
